# moodle-convert

./: LICENSE  README.md  pyproject.toml
docs/: README.md
examples/: example.xml  example.yaml
src/: main.py
src/parsers/: yaml_parser.py  yaml_schema.cue  yaml_schema.json  yaml_validator.py
src/quiz_types/: multichoice.py  truefalse.py  yesno.py
src/templates/: quiz_template.xml  scaffold.yaml
tests/: test1.xml  test1.yaml  test_yesno.py
